[gd_scene load_steps=2 format=3 uid="uid://dxfwijgv4sab6"]

[ext_resource type="Script" uid="uid://6mh80bwp0q60" path="res://scripts/path_choice_ui.gd" id="1_path"]

[node name="PathChoiceUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_path")

[node name="DimPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.7)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "WÃ¤hle deinen Pfad"
horizontal_alignment = 1

[node name="HardPathButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Schwerer Pfad
(Besserer Loot)"

[node name="EasyPathButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -60.0
offset_right = 220.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Leichter Pfad
(Weniger Loot)"
